--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <title>Mauricio Erazo - Portafolio Profesional</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header class="main-header">
+    <header class="main-header home-header">
         <nav class="main-nav">
             <ul>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="pages/bio.html">BIO</a></li>
                 <li><a href="pages/experiencia.html">EXPERIENCIA</a></li>
                 <li><a href="pages/certificaciones.html">CERTIFICACIONES</a></li>
