--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mauricio Erazo - Portafolio Profesional</title>
-    <!-- Bootstrap solo si es necesario (recomiendo eliminarlo) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -12,23 +11,22 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <button class="menu-toggle" aria-label="Menú móvil">☰</button>
+   
     
     <header class="main-header home-header">
         <nav class="main-nav">
             <ul>
-                <!-- Enlace INICIO corregido -->
-                <li><a href="index.html">INICIO</a></li>
-                <!-- Rutas relativas ajustadas -->
-                <li><a href="pages/bio.html">BIO</a></li>
-                <li><a href="pages/experiencia.html">EXPERIENCIA</a></li>
-                <li><a href="pages/servicios.html">SERVICIOS</a></li>
-                <li><a href="pages/contacto.html">CONTACTO</a></li>
+                <li><a href="/index.html">INICIO</a></li>
+                <li><a href="/pages/bio.html">BIO</a></li>
+                <li><a href="/pages/experiencia.html">EXPERIENCIA</a></li>
+                <li><a href="/pages/servicios.html">SERVICIOS</a></li>
+                <li><a href="/pages/detective.html">OSINT TOOLS</a></li>
+                <li><a href="/pages/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
         
         <div class="hero-content">
-            <div class="title-container initial-animation">
+            <div class="title-container">
                 <h1>MAURICIO ERAZO</h1>
                 <div class="subtitle">
                     <p class="line1">Tech & Business Innovator | AI & Cloud Developer</p>
@@ -38,14 +36,12 @@
         </div>
     </header>
 
-  
     <footer class="main-footer">
         <div class="container">
-            <p class="animate-on-scroll">Derechos reservados &copy 2025 <span id="current-year"></span></p>
+            <p>&copy; <span id="current-year"></span> Mauricio Erazo</p>
         </div>
     </footer>
 
     <script src="js/scripts.js"></script>
-    <!-- Eliminar Bootstrap si no se usa -->
 </body>
 </html>
