--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -17,16 +17,17 @@
     <meta name="description" content="Portafolio profesional de Mauricio Erazo - Experto en Automatización, IA y Ciberseguridad">
 </head>
 <body>
-    <button class="menu-toggle" aria-label="Menú móvil">☰</button>
+    
     
     <header class="main-header">
         <nav class="main-nav">
             <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="bio.html">BIO</a></li>
-                <li><a href="experiencia.html" class="active">EXPERIENCIA</a></li>
-                <li><a href="servicios.html">SERVICIOS</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+                <li><a href="/index.html">INICIO</a></li>
+                <li><a href="/pages/bio.html">BIO</a></li>
+                <li><a href="/pages/experiencia.html">EXPERIENCIA</a></li>
+                <li><a href="/pages/servicios.html">SERVICIOS</a></li>
+                <li><a href="/pages/detective.html">OSINT TOOLS</a></li>
+                <li><a href="/pages/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
