--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
                 <li><a href="/pages/bio.html">BIO</a></li>
                 <li><a href="/pages/experiencia.html">EXPERIENCIA</a></li>
                 <li><a href="/pages/servicios.html">SERVICIOS</a></li>
-                <li><a href="/pages/detective.html">OSINT TOOLS</a></li>
+                <li><a href="/pages/detective.html">MODO DETECTIVE</a></li>
                 <li><a href="/pages/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
