ADICION DE SCHEMA MARKUP PARA SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mauricio Erazo - Portafolio Profesional</title>
+    <title>Mauricio Erazo | Servicios Profesionales: Consultor IA, Optimización Logística y Ciberseguridad</title>
+     <!-- ============= SCHEMA MARKUP PARA SEO ============= -->
+    <!-- Datos estructurados para posicionamiento en buscadores -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Mauricio Erazo",
+            "url": "https://tudominio.com",
+            "image": "https://tudominio.com/img/mao1.png",
+            "jobTitle": "Tech & Business Innovator | AI & Cloud Developer",
+            "description": "Especialista en consultoría de IA, optimización logística y ciberseguridad para empresas",
+            "email": "mauricioandreserazo@outlook.com,
+            "telephone": "+57 3102482881",
+            "address": {
+               
+                "addressLocality": "Colombia",
+                
+            "sameAs": [
+                "https://www.linkedin.com/in/mauricioerazoarango",
+                "https://github.com/mauricioaea"
+            ],
+            "knowsAbout": [
+                "Inteligencia Artificial",
+                "Desarrollo en la Nube",
+                "Optimización Logística",
+                "Ciberseguridad",
+                "Automatización de Procesos"
+            ]
+        }
+        </script>
+        <!-- ============= FIN SCHEMA MARKUP ============= -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
