--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -8,7 +8,64 @@
                    child-src https://www.youtube.com https://www.youtube-nocookie.com;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mauricio Erazo | Experiencia Profesional</title>
+    <title>Mauricio Erazo | Servicios Profesionales: Consultor IA, Optimización Logística y Ciberseguridad</title>
+     <!-- ============= SCHEMA MARKUP BIOGRAFÍA ============= -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Mauricio Erazo",
+            "url": "https://tudominio.com/pages/bio.html",
+            "image": "https://tudominio.com/img/bio-profesional.webp",
+            "description": "Especialista en visión por computadora y sistemas de IA aplicados a seguridad y control de calidad",
+            "hasOccupation": {
+                "@type": "Occupation",
+                "name": "Desarrollador de Sistemas de Visión Artificial",
+                "skills": [
+                    "OpenCV",
+                    "YOLOv8",
+                    "Machine Learning",
+                    "Detección de emociones",
+                    "Python"
+                ]
+            },
+            "workFeatured": [
+                {
+                    "@type": "Project",
+                    "name": "Sistema de Control de Acceso con IA",
+                    "url": "https://tudominio.com/pages/bio.html#control-acceso",
+                    "description": "Sistema de reconocimiento facial para gestión de accesos seguros",
+                    "video": {
+                        "@type": "VideoObject",
+                        "name": "Demo Sistema de Control de Acceso",
+                        "description": "Implementación de reconocimiento facial con OpenCV y Python",
+                        "thumbnailUrl": "https://img.youtube.com/vi/cKqkVEuAoXI/maxresdefault.jpg",
+                        "uploadDate": "2024-05-15",
+                        "contentUrl": "https://www.youtube.com/watch?v=cKqkVEuAoXI"
+                    }
+                },
+                {
+                    "@type": "Project",
+                    "name": "Detección de Objetos con YOLOv8",
+                    "url": "https://tudominio.com/pages/bio.html#deteccion-objetos",
+                    "applicationCategory": "Computer Vision",
+                    "keywords": "YOLO, PyTorch, Edge Computing",
+                    "video": {
+                        "@type": "VideoObject",
+                        "name": "Detección de Objetos en Tiempo Real",
+                        "thumbnailUrl": "https://img.youtube.com/vi/SI061hxvEDc/maxresdefault.jpg",
+                        "uploadDate": "2024-06-10",
+                        "contentUrl": "https://www.youtube.com/watch?v=SI061hxvEDc"
+                    }
+                }
+            ],
+            "sameAs": [
+                "https://www.linkedin.com/in/mauricioerazoarango/",
+                "https://github.com/mauricioaea"
+            ]
+        }
+    </script>
+        <!-- ============= FIN SCHEMA MARKUP ============= -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
