--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,6 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Consultor estratégico en IA, logística global y gestión financiera. +15 años de experiencia certificada por IBM y Coursera. Resultados comprobados en 12 países.">
     <title>Mauricio Erazo | Servicios Profesionales: Consultor IA, Optimización Logística y Ciberseguridad</title>
+     <!-- ============= SCHEMA MARKUP SERVICIOS ============= -->
+     <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "ItemList",
+            "itemListElement": [
+                {
+                    "@type": "Service",
+                    "serviceType": "Inteligencia Artificial Empresarial",
+                    "provider": {
+                        "@type": "Person",
+                        "name": "Mauricio Erazo",
+                        "url": "https://tudominio.com",
+                        "sameAs": "https://www.linkedin.com/in/mauricioerazoarango/"
+                    },
+                    "description": "Implementación de sistemas predictivos y visión computacional con 92% de precisión",
+                    "areaServed": {
+                        "@type": "Country",
+                        "name": "Colombia"
+                    },
+                    "offers": {
+                        "@type": "Offer",
+                        "availability": "http://schema.org/OnlineOnly"
+                    }
+                },
+                {
+                    "@type": "Service",
+                    "serviceType": "Gestión Financiera y Administrativa",
+                    "provider": {
+                        "@type": "Person",
+                        "name": "Mauricio Erazo"
+                    },
+                    "description": "Optimización de procesos documentales y maximización de ROI financiero",
+                    "keywords": "ROI, gestión financiera, consultoría remota"
+                },
+                {
+                    "@type": "Service",
+                    "serviceType": "Automatización Logística Global",
+                    "description": "Sistemas de optimización para cadenas de suministro internacionales",
+                    "hasOfferCatalog": {
+                        "@type": "OfferCatalog",
+                        "name": "Servicios Logísticos",
+                        "itemListElement": [
+                            {
+                                "@type": "Offer",
+                                "itemOffered": "Gestión de inventarios inteligente"
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": "Control de ventas automatizado"
+                            }
+                        ]
+                    }
+                },
+                {
+                    "@type": "Service",
+                    "serviceType": "Ciberseguridad Empresarial",
+                    "description": "Protección avanzada de activos digitales y redes corporativas",
+                    "serviceOutput": "Reducción de vulnerabilidades en un 95%"
+                }
+            ],
+            "mainEntityOfPage": {
+                "@type": "WebPage",
+                "@id": "https://tudominio.com/pages/servicios.html"
+            }
+        }
+        </script>
+        <!-- ============= FIN SCHEMA MARKUP ============= -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/services.css">
