ajustes rutas funcionan en visual studio

--- a/pages/privacy_policy.html
+++ b/pages/privacy_policy.html
@@ -25,10 +25,15 @@
     <header class="main-header">
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">INICIO</a></li>
-                <li><a href="/pages/experiencia.html">EXPERIENCIA</a></li>
-                <li><a href="/pages/contacto.html">CONTACTO</a></li>
-                <li><a href="/pages/privacy policy.html" aria-current="page">POLITICA PRIVACIDAD</a></li>
+                <ul>
+                    <a href="../index.html">INICIO</a>
+                    <a href="experiencia.html">EXPERIENCIA</a>
+                    <a href="contacto.html">CONTACTO</a>
+                    <a href="privacy_policy.html">PRIVACIDAD</a>
+
+<!-- CSS -->
+<link rel="stylesheet" href="../css/styles.css">
+                </ul>
             </ul>
         </nav>
     </header>
@@ -139,7 +144,7 @@
                     <div class="contact-item">
                         <i class="fas fa-user-shield"></i>
                         <h2>Data Protection Officer (DPO):</h2>
-                        <p1>Angela Erazo<br>
+                        <p1>Angela Erazo</p1><br>
                         <a href="mailto:robbyapartments@yahoo.com">robbyapartments@yahoo.com</a><br>
                         +599 956 09487</p>
                     </div>
