--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
         <header class="main-header home-header">
             <nav class="main-nav">
                 <ul>
-                    <li><a href="/index.html">INICIO</a></li>
-                    <li><a href="/pages/experiencia.html">EXPERIENCIA</a></li>
-                    <li><a href="/pages/contacto.html">CONTACTO</a></li>
-                    <li><a href="/pages/privacy policy.html" aria-current="page">POLITICA PRIVACIDAD</a></li>
+                    <ul>
+                        <a href="../index.html">INICIO</a>
+                        <a href="pages/experiencia.html">EXPERIENCIA</a>
+                        <a href="pages/contacto.html">CONTACTO</a>
+                        <a href="pages/privacy_policy.html">PRIVACIDAD</a>
+
+                        <!-- CSS -->
+                        <link rel="stylesheet" href="css/styles.css">
+
+                    </ul>
                 </ul>
             </nav>
             
