--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,12 +19,16 @@
     <header class="main-header">
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">INICIO</a></li>
-               
-                <li><a href="/pages/experiencia.html">EXPERIENCIA</a></li>
-              
-                <li><a href="/pages/contacto.html">CONTACTO</a></li>
-                <li><a href="/pages/privacy policy.html" aria-current="page">POLITICA PRIVACIDAD</a></li>
+                <ul>
+                    <a href="../index.html">INICIO</a>
+                    <a href="experiencia.html">EXPERIENCIA</a>
+                    <a href="contacto.html">CONTACTO</a>
+                    <a href="privacy_policy.html">PRIVACIDAD</a>
+
+                    <!-- CSS -->
+                    <link rel="stylesheet" href="../css/styles.css">
+
+                </ul>
             </ul>
         </nav>
     </header>
