--- a/pages/privacy_policy.html
+++ b/pages/privacy_policy.html
@@ -147,6 +147,7 @@
                         <p1>Angela Erazo</p1><br>
                         <a href="mailto:robbyapartments@yahoo.com">robbyapartments@yahoo.com</a><br>
                         +599 956 09487</p>
+                        <p1>Westpunt 13,000 CW Curazao</p1>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-building"></i>
